@@ -60,6 +60,7 @@ MOONLIGHT_CHECK_GTK
 MOONLIGHT_CHECK_XRANDR
 MOONLIGHT_CHECK_FONTS
 MOONLIGHT_CHECK_CAIRO
+MOONLIGHT_CHECK_LLVM
 MOONLIGHT_CHECK_GALLIUM
 
 MOONLIGHT_CHECK_MONO
@@ -129,13 +130,13 @@ AC_SUBST(MOON_EXTRA_CFLAGS)
 AC_SUBST(MOON_EXTRA_LIBS)
 
 MOON_PROG_CFLAGS="$GTK_CFLAGS $ALSA_CFLAGS $FFMPEG_CFLAGS $PULSEAUDIO_CFLAGS $MONO_CFLAGS $DBUS_CFLAGS -I\$(top_srcdir)/src/ -I\$(top_srcdir)/src/pal"
-MOON_PROG_LIBS="$GTK_LIBS $FFMPEG_LIBS $UNWIND_LIBS \$(top_builddir)/src/libmoon.la $MONO_LIBS $DBUS_LIBS"
+MOON_PROG_LIBS="$GTK_LIBS $FFMPEG_LIBS $UNWIND_LIBS \$(top_builddir)/src/libmoon.la $MONO_LIBS $DBUS_LIBS $GALLIUM_LIBS $LLVM_LIBS"
 AC_SUBST(MOON_PROG_CFLAGS)
 AC_SUBST(MOON_PROG_LIBS)
 
 PLUGIN_CFLAGS="$GTK_CFLAGS $MONO_CFLAGS -DPLUGIN_DIR=\\\"\$(pkglibdir)\\\""
-PLUGIN_LIBS="$GTK_LIBS $MONO_STATIC_LIBS $GALLIUM_LIBS $FFMPEG_LIBS"
-PLUGIN_XPI_LIBS="$GTK_LIBS $MONO_STATIC_LIBS $GALLIUM_LIBS $FFMPEG_LIBS"
+PLUGIN_LIBS="$GTK_LIBS $MONO_STATIC_LIBS $GALLIUM_LIBS $LLVM_LIBS $FFMPEG_LIBS"
+PLUGIN_XPI_LIBS="$GTK_LIBS $MONO_STATIC_LIBS $GALLIUM_LIBS $LLVM_LIBS $FFMPEG_LIBS"
 
 AC_SUBST(PLUGIN_CFLAGS)
 AC_SUBST(PLUGIN_LIBS)
@@ -247,6 +248,7 @@ Moonlight configuration
 
   General configuration:
 	Using cairo: $with_cairo
+	Using LLVM: $enable_llvm
 	Test Harness: $with_testing $testing_reason
 	Performance Suite: $with_performance $performance_reason
 	MonoDevelop SDK: $enable_sdk $sdk_reason
